Add demo controls and update documentation
- Added demo buttons for manual person data generation
- Added clear person data functionality
- Updated README and QUICKSTART with person analysis features
- Enhanced user interface with demo controls
- Improved documentation for SONY ITRIOS and Google Gemini integration

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -246,6 +246,14 @@
                 <span>最終更新: <span id="last-update">2025-08-04 08:00:00</span></span>
                 <span class="connection-status" id="connection-status">接続中</span>
             </div>
+            <div class="demo-controls">
+                <button class="demo-button" onclick="generateDemoPersonData()">
+                    🎭 デモ人物データ生成
+                </button>
+                <button class="demo-button" onclick="clearPersonData()">
+                    🗑️ 人物データクリア
+                </button>
+            </div>
         </footer>
     </div>
 
