8月8日作成分

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -24,6 +24,9 @@
                 <div class="screen-progress">
                     <span id="screen-progress">1/6</span>
                 </div>
+                <div class="control-info">
+                    <span>🖱️ スクロール: 画面切替 | ⌨️ 矢印キー: 画面切替 | スペース: 一時停止</span>
+                </div>
             </div>
         </header>
 
